# autohw

./: .gitignore  GLOBAL PLAN.md  README.md  pyproject.toml
docs/: README.md
src/common/validation/: __init__.py  json_data.py  paths.py  strings.py
src/study_agent/: __init__.py  __main__.py
src/study_agent/adapters/: __init__.py  codex_course_mutation_runner.py
src/study_agent/application/: __init__.py  add_course.py  course_mutation.py  update_course.py
src/study_agent/cli/: __init__.py  main.py
src/study_agent/domain/: __init__.py  context_reference.py  course.py  course_root.py  discovery.py  pydantic_types.py
src/study_agent/ports/: __init__.py  course_mutation_runner.py
src/study_agent/prompts/: __init__.py
src/study_agent/prompts/course/: __init__.py  create_add_course_prompt.py  create_update_course_prompt.py
src/study_agent/skills/: __init__.py
tests/: test_cli.py  test_course_context.py
tests/adapters/: test_codex_course_mutation_runner.py
tests/application/: test_course_mutation.py
tests/common/validation/: test_json_data.py  test_paths.py  test_strings.py
tests/domain/: test_course.py  test_course_root.py  test_discovery.py
tests/fixtures/domain/course/: description_not_string.json  duplicate_reference_paths.json  empty_references.json  invalid_reference_type.json  malformed.json  unknown_field.json  valid_context.json
tests/fixtures/domain/discovery/: invalid_finding_type.json  invalid_reference_type.json  malformed.json  (+2 more)
tests/fixtures/files/: reference_a.md  reference_b.md  report.md
tests/prompts/: test_course_prompts.py
(+7 files in other folders)
