[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "study-agent"
version = "0.1.0"
description = "Codex-based homework automation pipeline."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
study-agent = "study_agent.cli.main:run"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/study_agent"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = ["src"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
